--- a/WeightTracker/WeightTracker/WeightTracker.csproj
+++ b/WeightTracker/WeightTracker/WeightTracker.csproj
@@ -73,17 +73,27 @@
   <ItemGroup>
     <Compile Include="Controller\FileAccessor.cs" />
     <Compile Include="Controller\IFileAccessor.cs" />
-    <Compile Include="PersonsViewForm.cs">
+    <Compile Include="Views\PersonMenuVIewForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PersonsViewForm.Designer.cs">
+    <Compile Include="Views\PersonMenuVIewForm.Designer.cs">
+      <DependentUpon>PersonMenuVIewForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PersonMenuViewForm1.cs" />
+    <Compile Include="Views\PersonsViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\PersonsViewForm.Designer.cs">
       <DependentUpon>PersonsViewForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\IValidator.cs" />
     <Compile Include="Utilities\Validator.cs" />
-    <EmbeddedResource Include="PersonsViewForm.resx">
+    <EmbeddedResource Include="Views\PersonMenuVIewForm.resx">
+      <DependentUpon>PersonMenuVIewForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\PersonsViewForm.resx">
       <DependentUpon>PersonsViewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
