--- a/WeightTracker/WeightTracker/WeightTracker.csproj
+++ b/WeightTracker/WeightTracker/WeightTracker.csproj
@@ -73,13 +73,12 @@
   <ItemGroup>
     <Compile Include="Controller\FileAccessor.cs" />
     <Compile Include="Controller\IFileAccessor.cs" />
-    <Compile Include="Views\PersonMenuVIewForm.cs">
+    <Compile Include="Views\PersonMenuViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Views\PersonMenuVIewForm.Designer.cs">
-      <DependentUpon>PersonMenuVIewForm.cs</DependentUpon>
+    <Compile Include="Views\PersonMenuViewForm.Designer.cs">
+      <DependentUpon>PersonMenuViewForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\PersonMenuViewForm1.cs" />
     <Compile Include="Views\PersonsViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -90,8 +89,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\IValidator.cs" />
     <Compile Include="Utilities\Validator.cs" />
-    <EmbeddedResource Include="Views\PersonMenuVIewForm.resx">
-      <DependentUpon>PersonMenuVIewForm.cs</DependentUpon>
+    <EmbeddedResource Include="Views\PersonMenuViewForm.resx">
+      <DependentUpon>PersonMenuViewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\PersonsViewForm.resx">
       <DependentUpon>PersonsViewForm.cs</DependentUpon>
