--- a/WeightTracker/WeightTracker/WeightTracker.csproj
+++ b/WeightTracker/WeightTracker/WeightTracker.csproj
@@ -73,6 +73,12 @@
   <ItemGroup>
     <Compile Include="Controller\FileAccessor.cs" />
     <Compile Include="Controller\IFileAccessor.cs" />
+    <Compile Include="Views\ChangePersonDataViewForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ChangePersonDataViewForm.Designer.cs">
+      <DependentUpon>ChangePersonDataViewForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\PersonMenuViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\IValidator.cs" />
     <Compile Include="Utilities\Validator.cs" />
+    <EmbeddedResource Include="Views\ChangePersonDataViewForm.resx">
+      <DependentUpon>ChangePersonDataViewForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\PersonMenuViewForm.resx">
       <DependentUpon>PersonMenuViewForm.cs</DependentUpon>
     </EmbeddedResource>
