Load works but save to db dont

--- a/WeightTracker/WeightTracker/WeightTracker.csproj
+++ b/WeightTracker/WeightTracker/WeightTracker.csproj
@@ -77,7 +77,8 @@
   <ItemGroup>
     <Compile Include="Controller\FileAccessor.cs" />
     <Compile Include="Controller\Helper.cs" />
-    <Compile Include="Controller\IFileAccessor.cs" />
+    <Compile Include="Controller\IAccessor.cs" />
+    <Compile Include="Controller\SQLAccessor.cs" />
     <Compile Include="Views\ChangePersonDataViewForm.cs">
       <SubType>Form</SubType>
     </Compile>
