--- a/WeightTracker/WeightTracker/WeightTracker.csproj
+++ b/WeightTracker/WeightTracker/WeightTracker.csproj
@@ -39,6 +39,9 @@
     <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.2.0.123\lib\net461\Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation, Version=11.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentValidation.11.1.0\lib\netstandard2.0\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.1.1.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -82,6 +85,8 @@
     <Compile Include="Controller\IAccessor.cs" />
     <Compile Include="Controller\SQLAccessor.cs" />
     <Compile Include="ConfigureContainer\IApplicationContainer.cs" />
+    <Compile Include="Utilities\PersonValidator.cs" />
+    <Compile Include="Utilities\WeightValidator.cs" />
     <Compile Include="ViewsInterfaces\IChangePersonDataViewForm.cs" />
     <Compile Include="Utilities\BMICalculatior.cs" />
     <Compile Include="Utilities\IBMICalculatior.cs" />
@@ -107,8 +112,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities\IValidator.cs" />
-    <Compile Include="Utilities\Validator.cs" />
     <EmbeddedResource Include="Views\ChangePersonDataViewForm.resx">
       <DependentUpon>ChangePersonDataViewForm.cs</DependentUpon>
     </EmbeddedResource>
