--- a/WeightTracker/WeightTracker/packages.config
+++ b/WeightTracker/WeightTracker/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="6.4.0" targetFramework="net48" />
   <package id="Dapper" version="2.0.123" targetFramework="net48" />
+  <package id="FluentValidation" version="11.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net48" />
