--- a/WeightTracker/WeightTracker.Test/packages.config
+++ b/WeightTracker/WeightTracker.Test/packages.config
@@ -3,6 +3,7 @@
   <package id="Autofac" version="6.4.0" targetFramework="net48" />
   <package id="Autofac.Extras.Moq" version="6.1.0" targetFramework="net48" />
   <package id="Castle.Core" version="5.1.0" targetFramework="net48" />
+  <package id="FluentValidation" version="11.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net48" />
   <package id="Moq" version="4.18.2" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
