--- a/WeightTracker/WeightTracker.Test/WeightTracker.Tests.csproj
+++ b/WeightTracker/WeightTracker.Test/WeightTracker.Tests.csproj
@@ -112,6 +112,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccessTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BMIcalculationTests.cs" />
   </ItemGroup>
